[package]
name = "mamdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chunked_index_set = { path = "../chunked_index_set"}
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
enum-map = "2.0.0"
ron = "0.7.0"